--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,15 +12,6 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
     
-    <servlet>
-        <servlet-name>CalculatorService</servlet-name>
-        <servlet-class>gob.gonet.testsecurews.services.CalculatorService</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>CalculatorService</servlet-name>
-        <url-pattern>/services/CalculatorService</url-pattern>
-    </servlet-mapping>
-    
     <security-role>
         <role-name>PORTAL_BASICUSER</role-name>
     </security-role>
@@ -31,25 +22,14 @@
     </login-config>
     
     <security-constraint>
-        <display-name>pages_auth</display-name>
+        <display-name>service_auth</display-name>
         <web-resource-collection>
-            <web-resource-name>pages_auth</web-resource-name>
-            <url-pattern>/services/*</url-pattern>
+            <web-resource-name>service_auth</web-resource-name>
+            <url-pattern>/CalculatorService</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <role-name>PORTAL_BASICUSER</role-name>
         </auth-constraint>
     </security-constraint>
-        
-    <security-constraint>
-        <display-name>pages_auth</display-name>
-        <web-resource-collection>
-            <web-resource-name>pages_auth</web-resource-name>
-            <url-pattern>/portal/*</url-pattern>
-        </web-resource-collection>
-        <auth-constraint>
-            <role-name>PORTAL_BASICUSER</role-name>
-        </auth-constraint>
-    </security-constraint>
-    
+            
 </web-app>
