--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,5 +31,16 @@
             <role-name>PORTAL_BASICUSER</role-name>
         </auth-constraint>
     </security-constraint>
-            
+
+    <security-constraint>
+        <display-name>portal_auth</display-name>
+        <web-resource-collection>
+            <web-resource-name>portal_auth</web-resource-name>
+            <url-pattern>/portal/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>PORTAL_BASICUSER</role-name>
+        </auth-constraint>
+    </security-constraint>
+                    
 </web-app>
